myteo/test/analyze/type_check/alias/substitution.exp
Error: Expected type `Bool` but found `Int`
test/analyze/type_check/alias/substitution.myte:16:3
 16 |   (1: equiv1);
    |    ^

Error: Expected type `Bool` but found `Int`
test/analyze/type_check/alias/substitution.myte:17:3
 17 |   (1: equiv2);
    |    ^

Error: Expected type `Bool` but found `Int`
test/analyze/type_check/alias/substitution.myte:18:3
 18 |   (1: equiv3);
    |    ^

Error: Expected type `Bool` but found `Int`
test/analyze/type_check/alias/substitution.myte:19:3
 19 |   (1: equiv4);
    |    ^

Error: Expected type `Bool` but found `Int`
test/analyze/type_check/alias/substitution.myte:20:3
 20 |   (1: equiv5);
    |    ^

Error: Expected type `Unit` but found `Int`
test/analyze/type_check/alias/substitution.myte:28:3
 28 |   (1: unitAlias);
    |    ^

Error: Expected type `Int` but found `Unit`
test/analyze/type_check/alias/substitution.myte:29:3-5
 29 |   ((): intAlias);
    |    ^^

Error: Expected type `Int` but found `Int -> Unit`
test/analyze/type_check/alias/substitution.myte:37:5-7
 37 |     (c1: Int);
    |      ^^

Error: Expected type `Int` but found `(Int -> Unit) -> Bool`
test/analyze/type_check/alias/substitution.myte:41:5-7
 41 |     (c2: Int);
    |      ^^

Error: Expected type `(Int, Unit) -> Bool` but found `(Int -> Unit) -> Bool`
test/analyze/type_check/alias/substitution.myte:44:5-7
 44 |     (c2: (Int, Unit) -> Bool);
    |      ^^

Error: Expected type `Int` but found `(Int -> Unit, String) -> ((Int -> Unit) -> Bool)`
test/analyze/type_check/alias/substitution.myte:46:5-7
 46 |     (c3: Int);
    |      ^^

Error: Expected type `(Int, Unit, String, Int, Unit) -> Bool` but found `(Int -> Unit, String) -> ((Int -> Unit) -> Bool)`
test/analyze/type_check/alias/substitution.myte:49:5-7
 49 |     (c3: (Int, Unit, String, Int, Unit) -> Bool);
    |      ^^

Error: Expected type `(Int -> Unit, String, Int -> Unit) -> Bool` but found `(Int -> Unit, String) -> ((Int -> Unit) -> Bool)`
test/analyze/type_check/alias/substitution.myte:50:5-7
 50 |     (c3: ((Int -> Unit), String, (Int -> Unit)) -> Bool);
    |      ^^